# TheNaviProject

./: .gitmodules  CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
example/: CMakeLists.txt
example/include/hardware/: hardware.h
example/include/hardware/resources/: resources.h
example/resources/: bundle.js
example/src/: hardware.cpp
example/web/: package.json
